// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Short Index short text  1`] = `
<div>
  <span
    class="css-1ynmwd2-textStyle"
  >
    Short Index
  </span>
</div>
`;

exports[`Short Index short text  2`] = `
<div>
  <span
    class="css-1c3ti0o-textStyle"
  >
    Short Index
  </span>
</div>
`;

exports[`Short Index short text  3`] = `
<div>
  <span
    class="css-17ewuvp-textStyle"
  >
    Short Index
  </span>
</div>
`;
